now works with fxml